# plasu_attendance

./: .env.example  .gitignore  Procfile  README.md  db.sqlite3  manage.py  requirements.txt  setup.cfg
attendance/: admin.py  apps.py  context_processors.py  decorators.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
attendance/management/commands/: seed_data.py
attendance/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_groups_and_more.py  0003_webauthncredential.py
attendance/templates/attendance/: attend_error.html  attend_session.html  attend_success.html  base.html  forgot_password.html  layout_sidebar.html  login.html  reset_password.html
attendance/templates/attendance/admin/: attendance_records.html  bulk_upload_students.html  course_form.html  courses.html  dashboard.html  department_form.html  departments.html  faculties.html  faculty_form.html  lecturer_form.html  lecturers.html  student_form.html  students.html
attendance/templates/attendance/lecturer/: attendance_history.html  courses.html  dashboard.html  session_detail.html  sessions.html  start_session.html
attendance/templates/attendance/partials/: admin_nav.html  lecturer_nav.html  messages.html  stat_card.html  student_nav.html
attendance/templatetags/: attendance_tags.py
attendanceenv/Scripts/: activate  activate.bat
plasu_attendance/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css  print.css
static/js/: main.js  qr_scanner.js
templates/: 404.html  500.html
(+3 files in other folders)
