[metadata]
name = plasu-smart-attendance
version = 1.0.0
description = Smart Attendance System for Plateau State University
author = PLASU IT Department
license = MIT

[tool:pytest]
DJANGO_SETTINGS_MODULE = plasu_attendance.settings
python_files = tests.py test_*.py *_test.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 120
exclude =
    migrations,
    .git,
    __pycache__,
    venv,
    .venv,
    staticfiles,
    media
ignore = E501,W503

[isort]
profile = black
known_django = django
known_third_party = rest_framework
known_first_party = attendance
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
